--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <div id="header">
     <div class="header-logo">Header Logo</div>
     <ul class="header-links">
-        <li>header link one</li>
-        <li>header link two</li>
-        <li>header link three</li>
+        <li><a href="https://www.google.com">header link one</a></li>
+        <li><a href="https://www.google.com">header link two</a></li>
+        <li><a href="https://www.google.com">header link three</a></li>
     </ul>
 </div>
 
