--- a/index.html
+++ b/index.html
@@ -19,38 +19,38 @@
 
 <div id="section1">
     <div>
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-        <button>Sign Up</button>
+        <h1 class="section1-header">This website is awesome</h1>
+        <p class="section1-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+        <button id="signup-button">Sign Up</button>
     </div>
-    <img src="https://cdn.theatlantic.com/media/mt/science/cat_caviar.jpg" width="400" height="200">
+    <img src="https://cdn.theatlantic.com/media/mt/science/cat_caviar.jpg" width="800" height="300">
 </div>
 
 <div id="section2">
     <h2>Some random info.</h2>
     <div class="section2-container">
         <div>
-            <img src="https://cdn.theatlantic.com/media/mt/science/cat_caviar.jpg" width="100" height="100">
+            <img src="https://cdn.theatlantic.com/media/mt/science/cat_caviar.jpg" >
             <p>This is some subtext under an illustration or image</p>
         </div>
         <div>
-            <img src="https://cdn.theatlantic.com/media/mt/science/cat_caviar.jpg" width="100" height="100">
+            <img src="https://cdn.theatlantic.com/media/mt/science/cat_caviar.jpg" >
             <p>This is some subtext under an illustration or image</p>
         </div>
         <div>
-            <img src="https://cdn.theatlantic.com/media/mt/science/cat_caviar.jpg" width="100" height="100">
+            <img src="https://cdn.theatlantic.com/media/mt/science/cat_caviar.jpg" >
             <p>This is some subtext under an illustration or image</p>
         </div>
         <div>
-            <img src="https://cdn.theatlantic.com/media/mt/science/cat_caviar.jpg" width="100" height="100">
+            <img src="https://cdn.theatlantic.com/media/mt/science/cat_caviar.jpg" >
             <p>This is some subtext under an illustration or image</p>
         </div>
     </div>
 </div>
 
 <div id="section3">
-    <div>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up sapce, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-    <div>-Thor, God of Thunder</div>
+    <div class="section3-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+    <div class="section3-signature">-Thor, God of Thunder</div>
 </div>
 
 <div id="section4">
@@ -60,7 +60,7 @@
             <p>Sign up for our product by clicking that button right over there!</p>
         </div>  
         <div class="section4-right">
-            <button>Sign Up</button>
+            <button id="signup-button">Sign Up</button>
         </div>
     </div>
 </div>
