--- a/index.html
+++ b/index.html
@@ -66,15 +66,8 @@
 </div>
 
 <div id="footer">
-    <p>Copyright Aaron Joslin-Wangdu 2021</p>
+    <p>Copyright &copy; Aaron Joslin-Wangdu 2021</p>
 </div>
-
-
-
-
-
-
-
 
 
 </html>
