finish section four and finishing touches

--- a/index.html
+++ b/index.html
@@ -55,13 +55,11 @@
 
 <div id="section4">
     <div class="section4-container">
-        <div class="section4-left">
-            <h3>Call to Action! It's Time!</h3>
+        <div class="section4-text">  
+            <h3>Call to action! It's time!</h3>
             <p>Sign up for our product by clicking that button right over there!</p>
         </div>  
-        <div class="section4-right">
             <button id="signup-button">Sign Up</button>
-        </div>
     </div>
 </div>
 
