finished now, changed to the boss page

--- a/index.html
+++ b/index.html
@@ -5,61 +5,61 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <title>Landing Page</title>
+    <title>The Boss</title>
 </head>
 
 <div id="header">
     <div class="header-logo">Header Logo</div>
     <ul class="header-links">
-        <li><a href="https://www.google.com">header link one</a></li>
-        <li><a href="https://www.google.com">header link two</a></li>
-        <li><a href="https://www.google.com">header link three</a></li>
+        <li><a href="https://www.google.com">Google</a></li>
+        <li><a href="https://www.twitter.com">Twitter</a></li>
+        <li><a href="https://www.theodinproject.com">TOP</a></li>
     </ul>
 </div>
 
 <div id="section1">
     <div>
-        <h1 class="section1-header">This website is awesome</h1>
-        <p class="section1-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-        <button id="signup-button">Sign Up</button>
+        <h1 class="section1-header">The Boss</h1>
+        <p class="section1-text">Pictured on the right is the distinguished Boss. The Boss has been responsible managing over 400 employees over the last two decades. The Boss prides herself in her ability to lead and inspire others.  </p>
+        <button id="signup-button">Apply Now</button>
     </div>
-    <img src="https://cdn.theatlantic.com/media/mt/science/cat_caviar.jpg" width="800" height="300">
+    <img src="boss5g.jpg" width="800" height="300">
 </div>
 
 <div id="section2">
-    <h2>Some random info.</h2>
+    <h2>One picture of The Boss, four different times!</h2>
     <div class="section2-container">
         <div>
-            <img src="https://cdn.theatlantic.com/media/mt/science/cat_caviar.jpg" >
-            <p>This is some subtext under an illustration or image</p>
+            <img src="boss5g.jpg">
+            <p>This is the first time.</p>
         </div>
         <div>
-            <img src="https://cdn.theatlantic.com/media/mt/science/cat_caviar.jpg" >
-            <p>This is some subtext under an illustration or image</p>
+            <img src="boss5g.jpg">
+            <p>This is the second time.</p>
         </div>
         <div>
-            <img src="https://cdn.theatlantic.com/media/mt/science/cat_caviar.jpg" >
-            <p>This is some subtext under an illustration or image</p>
+            <img src="boss5g.jpg">
+            <p>This is the third time. Let's see if flex-wrap works. (Looks like it does!)</p>
         </div>
         <div>
-            <img src="https://cdn.theatlantic.com/media/mt/science/cat_caviar.jpg" >
-            <p>This is some subtext under an illustration or image</p>
+            <img src="boss5g.jpg">
+            <p>This is the fourth time.</p>
         </div>
     </div>
 </div>
 
 <div id="section3">
-    <div class="section3-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-    <div class="section3-signature">-Thor, God of Thunder</div>
+    <div class="section3-text">Follow me. I will make sure that you are not led astray. Under my guidance, you will become the best version of yourself. You know you want to do it, just let me be your boss!</div>
+    <div class="section3-signature">- Elsa, The Boss</div>
 </div>
 
 <div id="section4">
     <div class="section4-container">
         <div class="section4-text">  
             <h3>Call to action! It's time!</h3>
-            <p>Sign up for our product by clicking that button right over there!</p>
+            <p>Join The Boss army today! Click the button to the right to apply.</p>
         </div>  
-            <button id="signup-button">Sign Up</button>
+            <button id="signup-button">Apply Now</button>
     </div>
 </div>
 
