--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <div id="header">
-    <div class="header-logo">Header Logo</div>
+    <div class="header-logo">The Boss</div>
     <ul class="header-links">
         <li><a href="https://www.google.com">Google</a></li>
         <li><a href="https://www.twitter.com">Twitter</a></li>
