--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <div id="header">
     <div class="header-logo">The Boss</div>
     <ul class="header-links">
-        <li><a href="https://www.google.com">Google</a></li>
-        <li><a href="https://www.twitter.com">Twitter</a></li>
-        <li><a href="https://www.theodinproject.com">TOP</a></li>
+        <li><a href="#section2">Pictures</a></li>
+        <li><a href="#section3">Inspiration</a></li>
+        <li><a href="#section4">Apply</a></li>
     </ul>
 </div>
 
